[project]
name = "pre-commit-exe-reproduction"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "itsjohncs", email = "johnsullivan.pem@gmail.com" }
]
dependencies = []
requires-python = ">= 3.12"

[project.scripts]
"custom-rye" = "pre_commit_exe_reproduction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pre_commit_exe_reproduction"]
